# Voice2TextBot

./: .dockerignore  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: pylint.yml
alembic/: Dockerfile  env.py
alembic/versions/: f99f593582bd_create_voice_messages_table.py
bot/: Dockerfile  bot.py  config.py
bot/handlers/: voice_handler.py
bot/middlewares/: logging_middleware.py
bot/utils/: rabbitmq_client.py  s3_upload.py
core/: Dockerfile  consumer.py  database.py  minio_client.py  models.py
rabbitmq_init/: create_queue.sh
