[tool.poetry]
name = "voice2text"
version = "0.1.0"
description = ""
authors = ["argunv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
psycopg = "^3.2.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
boto3 = "^1.35.79"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
